<resources>
    <string name="app_name">PALab12</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="nameHint">Please enter your full name</string>
    <string name="dateHint">Please enter the date of the event</string>
    <string name="detailsHint">Please describe the event</string>
    <string name="submit">Submit</string>
    <string name="listButton">List</string>
</resources>
